# extlog

./: LICENSE  README.md  pyproject.toml
extlog/: __init__.py  _console.py  default.py  formatters.py  handlers.py  loggers.py  utils.py
