[project]
name = "extlog"
version = "0.1.0"
description = "mini extension for python logging"
authors = [{ name="dinalt", email="thedinalt@gmail.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [ 
    "colorama"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
